[gd_scene load_steps=5 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://font/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://font/pressstart2p.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
extra_spacing_bottom = 4
font_data = ExtResource( 2 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 292.377 ],
"_edit_vertical_guides_": [ 40.0 ]
}

[node name="gui" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="gui"]
anchor_right = 0.282777
margin_left = 40.0
margin_top = 40.0
margin_right = 531.778
margin_bottom = 193.0
custom_fonts/font = SubResource( 1 )
text = "dfdfd df ddfgfd gf dfgfd dfg dgd fdfg dg dfgd fgd dfgdg"
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CheckBox" type="CheckBox" parent="gui"]
margin_left = 41.0
margin_top = 211.0
margin_right = 130.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 3 )
text = "auto"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="gui"]
margin_left = 150.0
margin_top = 214.567
margin_right = 229.0
margin_bottom = 238.567
min_value = 1.0
max_value = 10.0
value = 5.0
rounded = true
suffix = "sek"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labels" type="Control" parent="gui"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="gui/labels"]
margin_left = 40.1727
margin_top = 271.247
margin_right = 139.173
margin_bottom = 290.247
custom_fonts/font = ExtResource( 3 )
text = "Кто?"

[node name="Label2" type="Label" parent="gui/labels"]
margin_left = 279.588
margin_top = 270.599
margin_right = 519.588
margin_bottom = 289.599
custom_fonts/font = ExtResource( 3 )
text = "Что происходит?"

[node name="Label3" type="Label" parent="gui/labels"]
margin_left = 540.173
margin_top = 270.247
margin_right = 628.173
margin_bottom = 289.247
custom_fonts/font = ExtResource( 3 )
text = "Где?"

[node name="lines" type="Control" parent="gui"]
margin_right = 40.0
margin_bottom = 40.0

[node name="line1" type="LineEdit" parent="gui/lines"]
margin_left = 40.0
margin_top = 290.129
margin_right = 260.173
margin_bottom = 318.129
custom_fonts/font = ExtResource( 3 )

[node name="line2" type="LineEdit" parent="gui/lines"]
margin_left = 279.456
margin_top = 290.493
margin_right = 517.456
margin_bottom = 318.493
custom_fonts/font = ExtResource( 3 )
text = "увидел загадочное явление"

[node name="line3" type="LineEdit" parent="gui/lines"]
margin_left = 538.456
margin_top = 290.493
margin_right = 757.456
margin_bottom = 318.493
custom_fonts/font = ExtResource( 3 )
text = "в огороде"

[node name="Button" type="Button" parent="gui"]
margin_left = 40.0
margin_top = 329.493
margin_right = 179.456
margin_bottom = 358.493
custom_fonts/font = ExtResource( 3 )
text = "Добавить"

[node name="Label2" type="Label" parent="gui"]
visible = false
margin_left = 280.0
margin_top = 332.0
margin_right = 761.0
margin_bottom = 362.0
custom_fonts/font = ExtResource( 3 )
text = "Заполните все поля!"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="gui"]
margin_left = 20.0
margin_top = 243.0
margin_right = 778.0
margin_bottom = 261.0

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="pressed" from="gui/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="value_changed" from="gui/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="gui/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
